--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "leadsAPI",
+  "name": "leadsapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index"
+    "stop": "pm2 stop ./index.js",
+    "restart": "pm2 restart ./index.js",
+    "start": "pm2 start ./index.js"
   },
   "keywords": [],
   "author": "",
