--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "stop": "pm2 stop ./index.js",
     "restart": "pm2 restart ./index.js",
-    "start": "pm2 start ./index.js"
+    "start": "nodemon ./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv-parser": "^2.3.2",
@@ -19,6 +20,8 @@
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "node-xlsx": "^0.15.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^7.18.1",
     "pm2": "^4.2.3",
     "xlsx": "^0.15.5"
