--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "stop": "pm2 stop ./index.js",
     "restart": "pm2 restart ./index.js",
-    "start": "nodemon ./index.js"
+    "start": "pm2 start ./index.js"
   },
   "keywords": [],
   "author": "",
